<resources>
    <string name="app_name">SwiftShopApplication</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="register">register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">click to register</string>
    <string name="logout">logout</string>

    <string name="nav_header_desc">Navigation header description</string>
    <string name="title_activity_main_navigation">MainNavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_shoppingCart">Shopping Cart</string>
    <string name="menu_Profile">Profile</string>
    <string name="menu_orders">Orders</string>
    <string name="default_email">Default Email</string>
    <string name="user_name">name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>