<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_shoppingCart"
            android:icon="@drawable/shopping_chart_icon"
            android:title="@string/menu_shoppingCart" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile_icon"
            android:title="@string/menu_Profile" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/orders"
            android:title="@string/menu_orders" />
    </group>
</menu>