<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.swiftshopapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_shoppingCart"
        android:name="com.example.swiftshopapplication.ui.profile.ProfileFragment"
        android:label="@string/menu_shoppingCart"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.swiftshopapplication.ui.profile.ProfileFragment"
        android:label="@string/menu_Profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_orders"
        android:name="com.example.swiftshopapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_profile" />
</navigation>